<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddContactFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ImportContactInfo" />

    <Button
        android:id="@+id/btn_openContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/importFromContacts"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactNameColon" />

    <EditText
        android:id="@+id/et_contactName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactNbrColon" />

    <EditText
        android:id="@+id/et_contactNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:inputType="phone"
        android:hint="@string/number"/>

    <Button
        android:id="@+id/btn_addContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addContact"/>

</LinearLayout>
